// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FLipQuoteButton Rendering renders with disabled state 1`] = `
<View
  style={
    [
      {},
      {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "center",
        "position": "relative",
      },
    ]
  }
>
  <View
    style={
      {
        "backgroundColor": "#b7bbc866",
        "height": 1,
        "position": "absolute",
        "width": "100%",
      }
    }
  />
  <View
    style={
      [
        {},
        {
          "backgroundColor": "#ffffff",
          "position": "relative",
        },
      ]
    }
  >
    <TouchableOpacity
      accessible={true}
      activeOpacity={1}
      disabled={true}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#3c4d9d0f",
          "borderRadius": 10000,
          "height": 44,
          "justifyContent": "center",
          "opacity": 0.5,
          "width": 44,
        }
      }
      testID="arrow-button"
    >
      <SvgMock
        color="#121314"
        fill="currentColor"
        height={24}
        name="SwapVertical"
        style={
          {
            "height": 24,
            "width": 24,
          }
        }
        width={24}
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`FLipQuoteButton Rendering renders with enabled state 1`] = `
<View
  style={
    [
      {},
      {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "center",
        "position": "relative",
      },
    ]
  }
>
  <View
    style={
      {
        "backgroundColor": "#b7bbc866",
        "height": 1,
        "position": "absolute",
        "width": "100%",
      }
    }
  />
  <View
    style={
      [
        {},
        {
          "backgroundColor": "#ffffff",
          "position": "relative",
        },
      ]
    }
  >
    <TouchableOpacity
      accessible={true}
      activeOpacity={1}
      disabled={false}
      onPress={[MockFunction]}
      onPressIn={[Function]}
      onPressOut={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#3c4d9d0f",
          "borderRadius": 10000,
          "height": 44,
          "justifyContent": "center",
          "opacity": 1,
          "width": 44,
        }
      }
      testID="arrow-button"
    >
      <SvgMock
        color="#121314"
        fill="currentColor"
        height={24}
        name="SwapVertical"
        style={
          {
            "height": 24,
            "width": 24,
          }
        }
        width={24}
      />
    </TouchableOpacity>
  </View>
</View>
`;
